# connector-proxy-status-im

./: .gitignore  .pre-commit-config.yaml  Dockerfile  Jenkinsfile  README  app.py  config.py  docker-compose.yml  hey.py  pyproject.toml
.github/workflows/: tests.yml
connectors/connector-aws/: pyproject.toml
connectors/connector-aws/connector_aws/auths/: simpleAuth.py
connectors/connector-aws/connector_aws/commands/: addDynamoItem.py  queryDynamoTable.py  scanDynamoTable.py  uploadFile.py
connectors/connector-bamboohr/: pyproject.toml
connectors/connector-bamboohr/connector_bamboohr/: getPayRate.py
connectors/connector-bamboohr/connector_bamboohr/commands/: getEmployeeInfo.py  getPayRate.py
connectors/connector-createpdf/: pyproject.toml
connectors/connector-createpdf/connector_createpdf/commands/: create.py
connectors/connector-invoicepdf/: pyproject.toml
connectors/connector-invoicepdf/connector_invoicepdf/commands/: createAndUploadToS3.py
connectors/connector-pdf/: pyproject.toml
connectors/connector-pdf/connector_pdf/commands/: create.py
connectors/connector-postgresql/: README.md  pyproject.toml
connectors/connector-postgresql/connector_postgresql/: baseCommand.py
connectors/connector-postgresql/connector_postgresql/commands/: createTable.py  deleteValues.py  doSQL.py  dropTable.py  insertValues.py  selectValues.py  updateValues.py
connectors/connector-waku/: Dockerfile  pyproject.toml
connectors/connector-waku/connector_waku/commands/: sendMessage.py
connectors/connector-xero/: pyproject.toml
connectors/connector-xero/connector_xero/: createInvoice.py
connectors/connector-xero/connector_xero/auths/: oauth.py
connectors/connector-xero/connector_xero/commands/: createInvoice.py  getCurrencies.py
