[tool.poetry]
name = "spiffworkflow-connector-proxy"
version = "0.1.0"
description = ""
authors = ["Jon Herron <jon.herron@yahoo.com>"]

[tool.poetry.dependencies]
python = "^3.10"
Flask = "*"

connector-xero = {git = "https://github.com/jbirddog/connector-xero", rev = "main"}
connector-bamboohr = {git = "https://github.com/jbirddog/connector-bamboohr", rev = "main"}
gunicorn = "^20.1.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
