[tool.poetry]
name = "spiffworkflow-connector-proxy"
version = "0.1.0"
description = ""
authors = ["Jon Herron <jon.herron@yahoo.com>"]

[tool.poetry.dependencies]
python = "^3.10"
Flask = "^2.2.2"

connector-xero = {develop=true, path="connectors/connector-xero"}
connector-bamboohr = {develop=true, path="connectors/connector-bamboohr"}
connector-waku = {develop=true, path="connectors/connector-waku"}
connector-aws = {develop=true, path="connectors/connector-aws"}
connector-createpdf = {develop=true, path="connectors/connector-createpdf"}
gunicorn = "^20.1.0"
Flask-OAuthlib = "^0.9.6"
Flask-Session = "^0.4.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
