[tool.poetry]
name = "connector-xero"
version = "0.1.0"
description = ""
authors = ["Jon Herron <jon.herron@yahoo.com>"]

[tool.poetry.dependencies]
python = "^3.11"
xero-python = "^1.18.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
